fixed match history alignment issue

--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -384,7 +384,7 @@ video {
 }
 
 .minimapContainer {
-  width: 20%;
+  /* width: 20%; */
   margin-left: 2%;
   display: flex;
   flex-direction: column;
